# calibration-conditioned-decoding

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
example/: README.md  create_sample_data.py  run_example.py
example/sample_data/job_x/: metadata.pt  params.json  shots.pt
example/sample_data/job_z/: metadata.pt  params.json  shots.pt
experiment_data/: README.md  index.csv
scripts/: consolidate_data.py  train.py  train_multi.py  validate.py
src/ibm_qec/: device.py
src/ibm_qec/baselines/: mwpm_calib.py  mwpm_eval.py  mwpm_eval_all.py
src/ibm_qec/data/: dataset.py  prepare.py  prepare_oneshot.py
src/ibm_qec/evaluation/: metrics.py
src/ibm_qec/model/: decoder.py
tests/: conftest.py  test_data_dataset.py  test_evaluation_metrics.py  test_integration.py  test_model_decoder.py  test_package_import.py  test_train_cli.py
